Isolate InAccel Coral deployment

--- a/inaccel/Makefile.patch
+++ b/inaccel/Makefile.patch
@@ -3,9 +3,9 @@
 @@ -67,7 +67,7 @@
  endif
  endif
- 
+
 -export LDFLAGS= -pthread -lm $(ADD_LDFLAGS) $(DMLC_LDFLAGS) $(PLUGIN_LDFLAGS)
-+export LDFLAGS= -pthread -lm -lcoral-api $(ADD_LDFLAGS) $(DMLC_LDFLAGS) $(PLUGIN_LDFLAGS)
++export LDFLAGS= -pthread -lm $(ADD_LDFLAGS) $(DMLC_LDFLAGS) $(PLUGIN_LDFLAGS) -lcoral-api
  export CFLAGS= -DDMLC_LOG_CUSTOMIZE=1 -std=c++11 -Wall -Wno-unknown-pragmas -Iinclude $(ADD_CFLAGS) $(PLUGIN_CFLAGS)
  CFLAGS += -I$(DMLC_CORE)/include -I$(RABIT)/include -I$(GTEST_PATH)/include
  #java include path
