--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "library/xgboost"]
-	path = library/xgboost
+[submodule "xgboost"]
+	path = xgboost
 	url = https://github.com/dmlc/xgboost.git
